@@ -1,3 +1,9 @@
+2004-07-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* md5x.tcl: Try and fix up the use of Trf with Memchan for the
+	new-style md5 package. Needs fixed recent versions of both
+	packages.
+
 2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* md5x.tcl: Updated version number to sync with 1.6.1
